kubernetes/k3s-prod-a/lidarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: docker.io/linuxserver/lidarr:2.8.2@sha256:e15772e07979510d40f7300c325a3e14dbe5b9b0cfaac8eefa4f93826809dc02
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: lidarr-downloads
              mountPath: /downloads
            - name: lidarr-music
              mountPath: /music
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: lidarr-downloads
          persistentVolumeClaim:
            claimName: lidarr-downloads
        - name: lidarr-music
          persistentVolumeClaim:
            claimName: lidarr-music
